--- a/.project
+++ b/.project
@@ -6,6 +6,11 @@
 	</projects>
 	<buildSpec>
 		<buildCommand>
+			<name>org.eclipse.wst.jsdt.core.javascriptValidator</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
 			<name>org.eclipse.jdt.core.javabuilder</name>
 			<arguments>
 			</arguments>
@@ -13,12 +18,13 @@
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>org.eclipse.wst.jsdt.core.jsNature</nature>
 	</natures>
 	<linkedResources>
 		<link>
 			<name>src/org</name>
 			<type>2</type>
-			<locationURI>PARENT-3-PROJECT_LOC/sparky_local/lucene-4.5.0-src/demo/src/java/org</locationURI>
+			<location>/Users/kyle/sparky_local/lucene-4.5.0-src/demo/src/java/org</location>
 		</link>
 	</linkedResources>
 </projectDescription>
